--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,29 +11,17 @@ jobs:
     runs-on: ${{ matrix.os }}-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Setup python
-      uses: actions/setup-python@v5
+    
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        python-version: 3.x
-    - name: test
-      shell: bash
-      run: |
-        # setup-python puts `python` into the `PATH`, not `python3`, yet
-        # `git-filter-repo` expects `python3` in the `PATH`. Let's add
-        # a shim.
-        printf '#!/bin/sh\n\nexec python "$@"\n' >python3 &&
-
-        export PATH=$PWD:$PATH &&
-
-        if ! t/run_tests -q -v -x
-        then
-          mkdir failed &&
-          tar czf failed/failed.tar.gz t
-          exit 1
-        fi
-    - name: upload failed tests' directories
-      if: failure()
-      uses: actions/upload-artifact@v4
-      with:
-        name: failed-${{ matrix.os }}
-        path: failed
+        dotnet-version: '7.0.x'
+        
+    - name: Restore dependencies
+      run: dotnet restore QRDER/QRDER.sln
+      
+    - name: Build
+      run: dotnet build QRDER/QRDER.sln --no-restore
+      
+    - name: Test
+      run: dotnet test QRDER/QRDER.sln --no-build --verbosity normal
