--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,10 @@ FodyWeavers.xsd
 # JetBrains Rider
 .idea/
 *.sln.iml
+
+# Python test files
+t/
+*.py
+pyproject.toml
+git-filter-repo
+git_filter_repo.py
