--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,15 @@
-name: Run tests
+name: .NET Build and Test
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
-  run-tests:
-    strategy:
-      matrix:
-        os: [ 'windows', 'ubuntu', 'macos' ]
-      fail-fast: false
-    runs-on: ${{ matrix.os }}-latest
+  build:
+    runs-on: windows-latest
+
     steps:
     - uses: actions/checkout@v4
     
