--- a/.gitattributes
+++ b/.gitattributes
@@ -4,7 +4,23 @@
 /contrib/filter-repo-demos/[a-z]* eol=lf
 /t/t9*/* eol=lf
 
-# C# dosyalarını öne çıkar
+# C# dosyaları için yapılandırma
 *.cs linguist-language=C#
 *.csproj linguist-language=C#
 *.sln linguist-language=C#
+*.cshtml linguist-language=C#
+*.razor linguist-language=C#
+
+# Satır sonu karakterleri için yapılandırma
+*.cs text eol=crlf
+*.csproj text eol=crlf
+*.sln text eol=crlf
+*.cshtml text eol=crlf
+*.razor text eol=crlf
+*.json text eol=crlf
+*.config text eol=crlf
+*.md text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.gitattributes text eol=lf
+*.gitignore text eol=lf
