--- a/.gitattributes
+++ b/.gitattributes
@@ -4,18 +4,25 @@
 /contrib/filter-repo-demos/[a-z]* eol=lf
 /t/t9*/* eol=lf
 
-# C# dosyaları için yapılandırma (yüksek öncelik)
+# C# dosyaları için yapılandırma
 *.cs linguist-language=C# linguist-detectable=true
 *.csproj linguist-language=C# linguist-detectable=true
 *.sln linguist-language=C# linguist-detectable=true
 *.cshtml linguist-language=C# linguist-detectable=true
 *.razor linguist-language=C# linguist-detectable=true
 
-# Diğer dosyalar için yapılandırma (düşük öncelik)
+# Python dosyalarını dil istatistiklerinden çıkar
 *.py linguist-detectable=false
-*.md linguist-detectable=false
-*.txt linguist-detectable=false
-*.sh linguist-detectable=false
+git-filter-repo linguist-detectable=false
+git_filter_repo.py linguist-detectable=false
+
+# Tüm diğer dosyaları dil istatistiklerinden çıkar
+* linguist-detectable=false
+*.cs linguist-detectable=true
+*.csproj linguist-detectable=true
+*.sln linguist-detectable=true
+*.cshtml linguist-detectable=true
+*.razor linguist-language=C# linguist-detectable=true
 
 # Satır sonu karakterleri için yapılandırma
 *.cs text eol=crlf
